
2000-11-30  Ales Hvezda  <ahvezda@geda.seul.org>

        * configure.in: Added -fnative-struct flag for CYGWIN port only

        * configure.in: Added --enable-debug flag to enable -g flag

2000-11-16  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_traverse.c: Move s_traverse_nethash_build to libgeda

	* src/s_traverse.c: Renamed all o_nethash functions to s_nethash
	  (in accordance to the changes made in libgeda)

2000-11-12  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/*.c: Fixed the misspelling of separator (pointed out by Stefan)

2000-11-04  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnet-vhdl.scm: Renamed this file to gnet-vhdlold.scm

	* scheme/gnet-vhdl.scm: Put this file back as gnet-vhdl.scm (undid
	  above)

	* docs/: Created documentation directory and moved all README.* 
	  files into this directory

	* docs/vams: Created directory, added vams documentation

	* examples/vams/: Created directory, moved the example vams design
	  into this directory (written by Eduard Moser and Martin Lehmann)

	* scheme/gnet-vams.scm: Added scheme backend code (update Makefile.am)
	  (written by Eduard Moser and Martin Lehmann)

	* src/g_register.c: Added register call for 
          gnetlist:vams-get-package-attributes

	* src/vams_misc.c: Added file to support vams backend (updated 
	  Makefile.am) (written by Eduard Moser and Martin Lehmann)

	* examples/vams/*: Misc updates to the example files

	* docs/gnetlist.txt: Moved file into docs directory

	* src/s_hierarchy.c: Fixed a minor bug in hierarchy-uref-order and
	  prepend mode: had to unmangle names using this flag as a parameter
	  (so that the right uref basename was used).

2000-11-03  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/gnetlist.1: Updated manual with all the various backend formats

2000-11-02  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_netlist.c: Added another call to a post process routine
	  (the routine to remove the uref mangling if that's enabled via
	   rc keyword)
