@@ -83,8 +83,7 @@ void main_prog(int argc, char *argv[])
 	fprintf(stderr, "THIS IS AN ALPHA RELEASE! version %s\n", VERSION);
     }
 #ifdef __CYGWIN32__
-    fprintf(stderr,
-	    "This is the CYGWIN32 version, It is an unsupported port.\n");
+    fprintf(stderr, "This is the CYGWIN port.  It is unstable.\n");
     fprintf(stderr, "USE AT YOUR OWN RISK!\n");
 #endif
 
