@@ -9,6 +9,10 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+2000-12-02  Ales Hvezda  <ahvezda@geda.seul.org>
+
+	* src/gschem.c: Changed Cygwin warning message
+
 2000-11-30  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/o_bus.c, o_box.c, o_move.c: Removed unused variable
